--- a/Trabalho de Análise de Dados Segurança Publica.ipynb
+++ b/Trabalho de Análise de Dados Segurança Publica.ipynb
@@ -54,6 +54,7 @@
     "pd.set_option('display.max_rows', None)\n",
     "dados2022 = pd.read_excel(\"C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SENASP/BancoVDE 2022.xlsx\")\n",
     "nRowsRead = None\n",
+    "#dados2023 = pd.read_excel(\"D:/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SENASP/BancoVDE 2023.xlsx\")\n",
     "dados2023 = pd.read_excel(\"C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SENASP/BancoVDE 2023.xlsx\")\n",
     "nRowsRead = None"
    ]
@@ -321,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c499fdaf-f36a-4925-b088-f2fa2b369cc0",
+   "id": "75f787f1-47b6-482e-b3cb-17ff1e922748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,18 +350,35 @@
     "\n",
     "for i, estado in enumerate(top_5_estados):\n",
     "    df_estado = df_top_5[df_top_5['uf'] == estado]\n",
-    "    plt.plot(df_estado['MES'], df_estado['total_vitima'], linestyle='-', marker='o', color=palette[i], label=estado)\n",
+    "    \n",
+    "    # Usando sns.lineplot para plotar a linha\n",
+    "    sns.lineplot(x=df_estado['MES'], y=df_estado['total_vitima'], \n",
+    "                 color=palette[i], label=estado, linewidth=2, marker='o', markersize=6)\n",
+    "    \n",
+    "    # Adicionando anotações para os totais mensais com destaque\n",
+    "    for j, (mes, total_vitima) in enumerate(zip(df_estado['MES'], df_estado['total_vitima'])):\n",
+    "        # Adicionando um destaque nas anotações (caixa de texto e ajuste na posição)\n",
+    "        plt.text(mes, total_vitima + 30, f'{total_vitima:,.0f}', \n",
+    "                 color=palette[i], ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor=palette[i], boxstyle='round,pad=0.3'))\n",
     "\n",
     "# Adicionando título e rótulos\n",
-    "plt.title('Total de Vítimas de Crimes por Mês para os 5 Estados com Mais Vítimas em 2022')\n",
-    "plt.xlabel('Mês')\n",
-    "plt.ylabel('Total de Vítimas')\n",
-    "plt.xticks(ticks=range(1, 13), labels=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'])\n",
-    "plt.legend(title='Estado')\n",
-    "plt.grid(True)\n",
+    "plt.title('Total de Vítimas de Crimes por Mês para os 5 Estados com Mais Vítimas em 2022', fontsize=16, fontweight='bold')\n",
+    "plt.xlabel('Mês', fontsize=14)\n",
+    "plt.ylabel('Total de Vítimas', fontsize=14)\n",
+    "plt.xticks(ticks=range(1, 13), labels=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'], fontsize=12)\n",
+    "plt.yticks(fontsize=12)\n",
+    "\n",
+    "# Adicionando a legenda\n",
+    "plt.legend(title='Estado', fontsize=12)\n",
+    "\n",
+    "# Adicionando a grade para melhor leitura\n",
+    "plt.grid(True, linestyle='--', alpha=0.6)\n",
     "\n",
     "# Exibindo o gráfico\n",
-    "plt.show()\n"
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -394,24 +412,40 @@
     "\n",
     "for i, estado in enumerate(top_5_estados):\n",
     "    df_estado = df_top_5[df_top_5['uf'] == estado]\n",
-    "    plt.plot(df_estado['MES'], df_estado['total_vitima'], linestyle='-', marker='o', color=palette[i], label=estado)\n",
+    "    \n",
+    "    # Usando sns.lineplot para plotar a linha\n",
+    "    sns.lineplot(x=df_estado['MES'], y=df_estado['total_vitima'], \n",
+    "                 color=palette[i], label=estado, linewidth=2, marker='o', markersize=6)\n",
+    "    \n",
+    "    # Adicionando anotações para os totais mensais com destaque\n",
+    "    for j, (mes, total_vitima) in enumerate(zip(df_estado['MES'], df_estado['total_vitima'])):\n",
+    "        # Adicionando um destaque nas anotações (caixa de texto e ajuste na posição)\n",
+    "        plt.text(mes, total_vitima + 30, f'{total_vitima:,.0f}', \n",
+    "                 color=palette[i], ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor=palette[i], boxstyle='round,pad=0.3'))\n",
     "\n",
     "# Adicionando título e rótulos\n",
-    "plt.title('Total de Vítimas de Crimes por Mês para os 5 Estados com Mais Vítimas em 2023')\n",
-    "plt.xlabel('Mês')\n",
-    "plt.ylabel('Total de Vítimas')\n",
-    "plt.xticks(ticks=range(1, 13), labels=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'])\n",
-    "plt.legend(title='Estado')\n",
-    "plt.grid(True)\n",
+    "plt.title('Total de Vítimas de Crimes por Mês para os 5 Estados com Mais Vítimas em 2023', fontsize=16, fontweight='bold')\n",
+    "plt.xlabel('Mês', fontsize=14)\n",
+    "plt.ylabel('Total de Vítimas', fontsize=14)\n",
+    "plt.xticks(ticks=range(1, 13), labels=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'], fontsize=12)\n",
+    "plt.yticks(fontsize=12)\n",
+    "\n",
+    "# Adicionando a legenda\n",
+    "plt.legend(title='Estado', fontsize=12)\n",
+    "\n",
+    "# Adicionando a grade para melhor leitura\n",
+    "plt.grid(True, linestyle='--', alpha=0.6)\n",
     "\n",
     "# Exibindo o gráfico\n",
-    "plt.show()"
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db4f085-9254-4637-9ab6-eef8f258d512",
+   "id": "944d23d2-8f49-4c77-a46e-d06fc2463bda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +488,12 @@
     "    total_estado_2022 = totais_2022[estado]\n",
     "    plt.plot(df_estado2022['MES'], df_estado2022['total_vitima'], linestyle='-', marker='o',\n",
     "             color=color_map[estado], label=f'{estado} (2022) - Total: {total_estado_2022:,.0f}')  # Removendo casas decimais\n",
+    "    \n",
+    "    # Adicionando anotações para os totais mensais de 2022 com destaque\n",
+    "    for mes, total_vitima in zip(df_estado2022['MES'], df_estado2022['total_vitima']):\n",
+    "        plt.text(mes, total_vitima + 30, f'{total_vitima:,.0f}', \n",
+    "                 color=color_map[estado], ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor=color_map[estado], boxstyle='round,pad=0.3'))\n",
     "\n",
     "# Plotando os dados de 2023 com totais no rótulo\n",
     "for estado in top_3_estados2023:\n",
@@ -461,16 +501,23 @@
     "    total_estado_2023 = totais_2023[estado]\n",
     "    plt.plot(df_estado2023['MES'], df_estado2023['total_vitima'], linestyle='--', marker='x',\n",
     "             color=color_map[estado], label=f'{estado} (2023) - Total: {total_estado_2023:,.0f}')  # Removendo casas decimais\n",
+    "    \n",
+    "    # Adicionando anotações para os totais mensais de 2023 com destaque\n",
+    "    for mes, total_vitima in zip(df_estado2023['MES'], df_estado2023['total_vitima']):\n",
+    "        plt.text(mes, total_vitima + 30, f'{total_vitima:,.0f}', \n",
+    "                 color=color_map[estado], ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor=color_map[estado], boxstyle='round,pad=0.3'))\n",
     "\n",
     "# Adicionando título e rótulos\n",
-    "plt.title('Total de Vítimas de Crimes por Mês e Totais Anuais para os 3 Estados com Mais Vítimas em 2022 e 2023')\n",
-    "plt.xlabel('Mês')\n",
-    "plt.ylabel('Total de Vítimas')\n",
-    "plt.xticks(ticks=range(1, 13), labels=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'])\n",
-    "plt.legend(title='Estado e Ano')\n",
+    "plt.title('Total de Vítimas de Crimes por Mês e Totais Anuais para os 3 Estados com Mais Vítimas em 2022 e 2023', fontsize=16, fontweight='bold')\n",
+    "plt.xlabel('Mês', fontsize=14)\n",
+    "plt.ylabel('Total de Vítimas', fontsize=14)\n",
+    "plt.xticks(ticks=range(1, 13), labels=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'], fontsize=12)\n",
+    "plt.legend(title='Estado e Ano', fontsize=12)\n",
     "plt.grid(True)\n",
     "\n",
     "# Exibindo o gráfico\n",
+    "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   },
@@ -535,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30461aea-639e-48ff-9d60-3fa5b9ae1c91",
+   "id": "a43c4ba0-a941-4d75-bca6-05c4e587826d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +617,7 @@
     "# Adicionando título e rótulos\n",
     "plt.title('Total de Vítimas de Crimes por Mês no RJ (2022/2023)', fontsize=16, fontweight='bold')\n",
     "plt.xlabel('Mês', fontsize=14)\n",
-    "plt.ylabel('Total de Vítimas', fontsize=14)\n",
+    "plt.ylabel('Total de Vítimas', fontsize=22)\n",
     "\n",
     "# Definindo as labels dos meses\n",
     "plt.xticks(ticks=range(1, 13), labels=['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'], fontsize=12)\n",
@@ -579,11 +626,15 @@
     "# Adicionando a legenda\n",
     "plt.legend(title=\"Ano\", fontsize=12)\n",
     "\n",
-    "# Adicionando anotações para os totais mensais (opcional)\n",
+    "# Melhorando as anotações para os totais mensais\n",
     "for i, (total_2022, total_2023) in enumerate(zip(df_grouped2022['total_vitima'], df_grouped2023['total_vitima'])):\n",
-    "    # Deslocando as anotações ligeiramente para que fiquem visíveis\n",
-    "    plt.text(i + 1, total_2022, f'{total_2022:,.0f}', color='red', fontsize=9, ha='center', va='bottom', verticalalignment='bottom')\n",
-    "    plt.text(i + 1, total_2023, f'{total_2023:,.0f}', color='blue', fontsize=9, ha='center', va='top', verticalalignment='top')\n",
+    "    # Ajustando a posição das anotações para maior legibilidade\n",
+    "    if total_2022 > total_2023:\n",
+    "        plt.text(i + 1, total_2022 + 20, f'{total_2022:,.0f}', color='red', fontsize=10, ha='center', va='bottom', fontweight='bold')\n",
+    "        plt.text(i + 1, total_2023 - 20, f'{total_2023:,.0f}', color='blue', fontsize=10, ha='center', va='top', fontweight='bold')\n",
+    "    else:\n",
+    "        plt.text(i + 1, total_2022 - 20, f'{total_2022:,.0f}', color='red', fontsize=10, ha='center', va='top', fontweight='bold')\n",
+    "        plt.text(i + 1, total_2023 + 20, f'{total_2023:,.0f}', color='blue', fontsize=10, ha='center', va='bottom', fontweight='bold')\n",
     "\n",
     "# Adicionando a grade para melhor leitura\n",
     "plt.grid(True, linestyle='--', alpha=0.7)\n",
@@ -596,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e389404-ac9c-4101-8366-6450b723eb3e",
+   "id": "bd89f46b-1819-4b2e-afe0-e613c89906d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +695,7 @@
     "    dados_agrupados2022 = preencher_meses(dados_agrupados2022)\n",
     "    dados_agrupados2023 = preencher_meses(dados_agrupados2023)\n",
     "    \n",
-    "    # Calcular os totais de vítimas por ano\n",
+    "    # Calcular os totais de eventos por ano\n",
     "    total_eventos_2022 = dados_agrupados2022['total_eventos'].sum()\n",
     "    total_eventos_2023 = dados_agrupados2023['total_eventos'].sum()\n",
     "\n",
@@ -655,6 +706,15 @@
     "    plt.plot(dados_agrupados2022['MES'], dados_agrupados2022['total_eventos'], marker='o', label=f'Ano 2022 - Total: {total_eventos_2022:,.0f}', color='blue')\n",
     "    plt.plot(dados_agrupados2023['MES'], dados_agrupados2023['total_eventos'], marker='o', label=f'Ano 2023 - Total: {total_eventos_2023:,.0f}', color='red')\n",
     "    \n",
+    "    # Adicionando as anotações para os valores mensais\n",
+    "    for mes, total_vitima in zip(dados_agrupados2022['MES'], dados_agrupados2022['total_eventos']):\n",
+    "        plt.text(mes, total_vitima + 5, f'{total_vitima:,.0f}', color='blue', ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor='blue', boxstyle='round,pad=0.3'))\n",
+    "    \n",
+    "    for mes, total_vitima in zip(dados_agrupados2023['MES'], dados_agrupados2023['total_eventos']):\n",
+    "        plt.text(mes, total_vitima + 5, f'{total_vitima:,.0f}', color='red', ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor='red', boxstyle='round,pad=0.3'))\n",
+    "\n",
     "    # Configurações do gráfico\n",
     "    plt.title(f'Total de Eventos \"{evento}\" por Mês no RJ (Por Ano)', fontsize=16)\n",
     "    plt.xlabel('Mês', fontsize=14)\n",
@@ -676,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f4f8de-a617-4079-aff8-5b33e71d1dbc",
+   "id": "c8d9e7c5-d3d4-4843-81e3-491c79f72a43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,6 +807,15 @@
     "        plt.plot(dados_agrupados2023['MES'], dados_agrupados2023['total_eventos'], marker='o',\n",
     "                 label=f'Ano 2023 (Total: {total_ano_2023:,.0f})', color='red')\n",
     "    \n",
+    "    # Adicionando as anotações para os valores mensais\n",
+    "    for mes, total_vitima in zip(dados_agrupados2022['MES'], dados_agrupados2022['total_eventos']):\n",
+    "        plt.text(mes, total_vitima + 5, f'{total_vitima:,.0f}', color='blue', ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor='blue', boxstyle='round,pad=0.3'))\n",
+    "    \n",
+    "    for mes, total_vitima in zip(dados_agrupados2023['MES'], dados_agrupados2023['total_eventos']):\n",
+    "        plt.text(mes, total_vitima + 5, f'{total_vitima:,.0f}', color='red', ha='center', fontsize=10, fontweight='bold',\n",
+    "                 bbox=dict(facecolor='white', edgecolor='red', boxstyle='round,pad=0.3'))\n",
+    "\n",
     "    # Configurações do gráfico\n",
     "    plt.title(f'Total de Eventos \"{evento}\" no Estado \"{estado}\" por Mês (2022-2023)')\n",
     "    plt.xlabel('Mês')\n",
@@ -781,6 +850,7 @@
     "#Dados SINESP\n",
     "pd.set_option('display.max_rows', None)\n",
     "dados_SINESP = pd.read_excel(\"C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicauf.xlsx\")\n",
+    "#dados_SINESP = pd.read_excel(\"D:/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicauf.xlsx\")\n",
     "nRowsRead = None # specify 'None' if want to read whole file"
    ]
   },
@@ -868,7 +938,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f44e5de2-4386-4c1c-abf5-5a97d4b3d39c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Filtrando os dados onde a coluna 'UF' é igual a 'RJ'\n",
@@ -1224,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb42f35-a57d-4edf-b147-ce1f0e68cb71",
+   "id": "fb9b312d-21b5-4493-9adc-25e40ba2f999",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,28 +1310,42 @@
     "total_por_ano = df_summarizado.groupby('ANO')['Vítimas'].sum().astype(int)\n",
     "\n",
     "# Criando o gráfico\n",
-    "plt.figure(figsize=(14, 10))\n",
-    "plt.plot(total_por_ano.index, total_por_ano.values, marker='o', linestyle='-', color='b', label='Vítimas por Ano')  # Add label here\n",
+    "plt.figure(figsize=(12, 8))  # Tamanho ajustado para evitar erro\n",
+    "plt.plot(total_por_ano.index, total_por_ano.values, marker='o', linestyle='-', color='b', label='Vítimas por Ano')\n",
     "\n",
     "# Adicionando título e rótulos aos eixos\n",
-    "plt.title('Número de Vítimas por Ano')\n",
-    "plt.xlabel('Ano')\n",
-    "plt.ylabel('Número de Vítimas')\n",
+    "plt.title(f'Número de Vítimas por Ano (Total: {total_ocorrencias} vítimas)', fontsize=16)\n",
+    "plt.xlabel('Ano', fontsize=12)\n",
+    "plt.ylabel('Número de Vítimas', fontsize=12)\n",
     "\n",
     "# Formatação dos ticks do eixo y para exibir apenas inteiros\n",
     "plt.gca().yaxis.set_major_formatter(ticker.FuncFormatter(lambda x, _: f'{int(x)}'))\n",
     "\n",
+    "# Adicionando as anotações de vítimas por ano\n",
+    "for ano, vitimas in total_por_ano.items():\n",
+    "    plt.text(ano, vitimas, str(vitimas), fontsize=9, ha='center', va='bottom', color='black', fontweight='bold')\n",
+    "\n",
+    "# Adicionando o quadro com os totais\n",
+    "# Criando a caixa de texto com os totais, agora com mais detalhes e formato\n",
+    "total_texto = f'Totais de Vítimas\\n\\nTotal Geral: {total_ocorrencias}\\n\\n' + '\\n'.join([f'{ano}: {vitimas}' for ano, vitimas in total_por_ano.items()])\n",
+    "\n",
+    "# Colocando o texto no gráfico em uma posição mais central e com melhorias visuais\n",
+    "plt.gca().text(0.98, 0.98, total_texto, ha='right', va='top', fontsize=10, bbox=dict(\n",
+    "    facecolor='lightblue',  # Cor de fundo suave\n",
+    "    edgecolor='darkblue',  # Cor da borda\n",
+    "    linewidth=2,  # Borda mais espessa\n",
+    "    boxstyle='round,pad=1.5',  # Estilo de caixa arredondada e com mais padding\n",
+    "    alpha=0.7),  # Transparência\n",
+    "    transform=plt.gca().transAxes)  # Usando a transformação para coordenadas relativas ao gráfico\n",
+    "\n",
     "# Exibindo a legenda\n",
-    "plt.legend()\n",
+    "plt.legend(loc='upper left', fontsize=12)\n",
     "\n",
     "# Exibindo o gráfico\n",
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# Exibindo os totais sem casas decimais\n",
-    "print(\"Total geral de vítimas:\", total_ocorrencias)\n",
-    "print(\"\\nTotal de vítimas por ano:\")\n",
-    "print(total_por_ano)\n",
+    "\n",
     "\n"
    ]
   },
@@ -1604,8 +1690,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Exemplo de uso das funções\n",
-    "arquivo_excel_munic = 'C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP//indicadoressegurancapublicamunic.xlsx'\n",
+    "arquivo_excel_munic = 'C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicamunic.xlsx'\n",
     "df_concatenado = ler_planilha(arquivo_excel_munic)\n",
     "\n",
     "# Obter as listas de estados e municípios únicos\n",
@@ -1720,6 +1805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pip install geopandas\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
