--- a/Trabalho de Análise de Dados Segurança Publica.ipynb
+++ b/Trabalho de Análise de Dados Segurança Publica.ipynb
@@ -52,6 +52,7 @@
    "source": [
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', None)\n",
+    "#dados2022 = pd.read_excel(\"D:/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SENASP/BancoVDE 2022.xlsx\")\n",
     "dados2022 = pd.read_excel(\"C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SENASP/BancoVDE 2022.xlsx\")\n",
     "nRowsRead = None\n",
     "#dados2023 = pd.read_excel(\"D:/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SENASP/BancoVDE 2023.xlsx\")\n",
@@ -1125,6 +1126,7 @@
     "#Dados SINESP MUNICÍPIOS\n",
     "pd.set_option('display.max_rows', None)\n",
     "dados_SINESP_Munic = pd.read_excel(\"C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicamunic.xlsx\")\n",
+    "#dados_SINESP_Munic = pd.read_excel(\"D:/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicamunic.xlsx\")\n",
     "nRowsRead = None # specify 'None' if want to read whole file\n"
    ]
   },
@@ -1206,7 +1208,7 @@
    "source": [
     "# Carregar a planilha do Excel\n",
     "arquivo_excel = \"C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicamunic.xlsx\"\n",
-    "\n",
+    "#arquivo_excel = \"D:/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicamunic.xlsx\"\n",
     "# Função para ler todas as abas de uma planilha e sumarizar os dados\n",
     "def ler_e_sumarizar_planilha(arquivo_excel):\n",
     "    # Ler todas as abas da planilha\n",
@@ -1691,6 +1693,7 @@
     "\n",
     "\n",
     "arquivo_excel_munic = 'C:/Users/Emers/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicamunic.xlsx'\n",
+    "#arquivo_excel_munic = 'D:/OneDrive/Workspace EBD/Doutorado/Disciplinas/Segundo Período/Dados SINESP/indicadoressegurancapublicamunic.xlsx'\n",
     "df_concatenado = ler_planilha(arquivo_excel_munic)\n",
     "\n",
     "# Obter as listas de estados e municípios únicos\n",
@@ -1998,7 +2001,378 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed01623-7c5b-46e4-bcec-52d92ccd8683",
+   "id": "bdb0df6b-e323-4fb2-aae5-9fd19e9671cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from prov.model import ProvDocument\n",
+    "from graphviz import Digraph\n",
+    "from prov.dot import prov_to_dot\n",
+    "from unidecode import unidecode\n",
+    "import datetime\n",
+    "\n",
+    "\n",
+    "def sanitize_label(label):\n",
+    "    return unidecode(label.replace(\"\\n\", \" \").replace(\"\\r\", \" \"))\n",
+    "\n",
+    "\n",
+    "def create_agents(d1):\n",
+    "    agents = {}\n",
+    "    agents[\"ufrj\"] = d1.agent(\n",
+    "        \"ufrj:UFRJ\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Organization\",\n",
+    "            \"foaf:name\": sanitize_label(\"Universidade Federal do Rio de Janeiro\"),\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"ppgi\"] = d1.agent(\n",
+    "        \"ufrj:PPGI\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Organization\",\n",
+    "            \"foaf:name\": sanitize_label(\"Programa de Pós-Graduação em Informática\"),\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"mai803\"] = d1.agent(\n",
+    "        \"ufrj:MAI803\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Organization\",\n",
+    "            \"foaf:name\": sanitize_label(\n",
+    "                \"Tópicos Especiais em Sistemas Complexos - Disciplina de Fundamentos de Ciência de Dados\"\n",
+    "            ),\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"developer\"] = d1.agent(\n",
+    "        \"ufrj:EBD\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Person\",\n",
+    "            \"foaf:name\": sanitize_label(\"Emerson Duarte\"),\n",
+    "            \"foaf:mbox\": \"emersonbd@ufrj.br\",\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"script\"] = d1.agent(\n",
+    "        \"ufrj:getProv.py\",\n",
+    "        {\"prov:type\": \"prov:SoftwareAgent\", \"foaf:name\": \"getProv.py\"},\n",
+    "    )\n",
+    "\n",
+    "    # Relacionando os agentes\n",
+    "    d1.actedOnBehalfOf(agents[\"ppgi\"], agents[\"ufrj\"])\n",
+    "    d1.actedOnBehalfOf(agents[\"mai803\"], agents[\"ppgi\"])\n",
+    "    d1.actedOnBehalfOf(agents[\"developer\"], agents[\"mai803\"])\n",
+    "    d1.actedOnBehalfOf(agents[\"script\"], agents[\"developer\"])\n",
+    "\n",
+    "    return agents\n",
+    "\n",
+    "\n",
+    "def generate_prov_document(nome_arquivo):\n",
+    "    d1 = ProvDocument()\n",
+    "    d1.add_namespace(\"ufrj\", \"https://www.ufrj.br\")\n",
+    "    d1.add_namespace(\"foaf\", \"http://xmlns.com/foaf/0.1/\")\n",
+    "\n",
+    "    agents = create_agents(d1)\n",
+    "    entities = {}\n",
+    "    activities = {}\n",
+    "\n",
+    "# Entidades (datasets)\n",
+    "    entities[\"SINESP\"] = d1.entity(\n",
+    "            \"ufrj:dados-sinesp\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Análise de Dados Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/BancoVDE_2022.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "    entities[\"SINESP\"] = d1.entity(\n",
+    "             \"ufrj:dados-sinesp\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Análise de Dados Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/BancoVDE_2023.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "    entities[\"SINESPJC\"] = d1.entity(\n",
+    "            \"ufrj:dados-sinespjc-uf\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Indicadores Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/Indicadoressegurancapublicauf.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "    entities[\"SINESPJC\"] = d1.entity(\n",
+    "            \"ufrj:dados-sinespjc-uf\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Indicadores Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/Indicadoressegurancapublicamunic.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "   # Atividade de processamento\n",
+    "    activities[\"process_data\"] = d1.activity(\n",
+    "        \"ufrj:processamento-dados\", startTime=datetime.datetime.now()\n",
+    "    )\n",
+    "    d1.used(activities[\"process_data\"], entities[\"SINESP\"])\n",
+    "    d1.used(activities[\"process_data\"], entities[\"SINESPJC\"])\n",
+    "\n",
+    "    # Entidades de resultados processados\n",
+    "    results = {\n",
+    "        \"vitimizacao\": \"Vitimização\",\n",
+    "        \"homicidios_dolosos\": \"Homicídios Dolosos\",\n",
+    "        \"roubo_carros\": \"Roubo de Carros\",\n",
+    "        \"trafico_drogas\": \"Tráfico de Drogas\",\n",
+    "    }\n",
+    "\n",
+    "    for key, label in results.items():\n",
+    "        entities[key] = d1.entity(\n",
+    "            f\"ufrj:{key}\",\n",
+    "            {\"prov:label\": sanitize_label(label), \"prov:type\": \"prov:Entity\"},\n",
+    "        )\n",
+    "        d1.wasGeneratedBy(entities[key], activities[\"process_data\"])\n",
+    "\n",
+    "    # Atividade de visualização\n",
+    "    activities[\"visualization\"] = d1.activity(\n",
+    "        \"ufrj:visualizacao\", startTime=datetime.datetime.now()\n",
+    "    )\n",
+    "    d1.used(activities[\"visualization\"], entities[\"SINESP\"])\n",
+    "    d1.used(activities[\"visualization\"], entities[\"SINESPJC\"])\n",
+    "\n",
+    "    # Resultado da visualização\n",
+    "    entities[\"visualization_output\"] = d1.entity(\n",
+    "        \"ufrj:visualizacao-output\",\n",
+    "        {\n",
+    "            \"prov:label\": sanitize_label(\"Resultado da Visualização\"),\n",
+    "            \"prov:type\": \"prov:Entity\",\n",
+    "        },\n",
+    "    )\n",
+    "    d1.wasGeneratedBy(entities[\"visualization_output\"], activities[\"visualization\"])\n",
+    "\n",
+    "    # Associações\n",
+    "    d1.wasAssociatedWith(activities[\"process_data\"], agents[\"developer\"])\n",
+    "    d1.wasAssociatedWith(activities[\"process_data\"], agents[\"script\"])\n",
+    "    d1.wasAssociatedWith(activities[\"visualization\"], agents[\"developer\"])\n",
+    "\n",
+    "    # Salvar gráfico PROV\n",
+    "    img_dir = \"assets/img\"\n",
+    "    os.makedirs(img_dir, exist_ok=True)\n",
+    "    output_path = os.path.join(img_dir, f\"{nome_arquivo}.png\")\n",
+    "    print(f\"O gráfico será salvo em: {output_path}\")\n",
+    "    dot = prov_to_dot(d1)\n",
+    "    dot.write_jpg(output_path)\n",
+    "\n",
+    "    return output_path\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    prov_image_path = generate_prov_document(\"analise_Dados_SegPub2\")\n",
+    "    print(f\"Arquivo PROV gerado: {prov_image_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6415a978-991b-413c-967a-6719ea3598e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from prov.model import ProvDocument\n",
+    "from graphviz import Digraph\n",
+    "from prov.dot import prov_to_dot\n",
+    "from unidecode import unidecode\n",
+    "import datetime\n",
+    "import pydot\n",
+    "\n",
+    "def sanitize_label(label):\n",
+    "    \"\"\"Função para remover caracteres especiais e quebras de linha do rótulo\"\"\"\n",
+    "    return unidecode(label.replace(\"\\n\", \" \").replace(\"\\r\", \" \"))\n",
+    "\n",
+    "\n",
+    "def create_agents(d1):\n",
+    "    \"\"\"Função para criar os agentes PROV\"\"\"\n",
+    "    agents = {}\n",
+    "    agents[\"ufrj\"] = d1.agent(\n",
+    "        \"ufrj:UFRJ\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Organization\",\n",
+    "            \"foaf:name\": sanitize_label(\"Universidade Federal do Rio de Janeiro\"),\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"ppgi\"] = d1.agent(\n",
+    "        \"ufrj:PPGI\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Organization\",\n",
+    "            \"foaf:name\": sanitize_label(\"Programa de Pós-Graduação em Informática\"),\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"mai803\"] = d1.agent(\n",
+    "        \"ufrj:MAI803\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Organization\",\n",
+    "            \"foaf:name\": sanitize_label(\n",
+    "                \"Tópicos Especiais em Sistemas Complexos - Disciplina de Fundamentos de Ciência de Dados\"\n",
+    "            ),\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"developer\"] = d1.agent(\n",
+    "        \"ufrj:EBD\",\n",
+    "        {\n",
+    "            \"prov:type\": \"prov:Person\",\n",
+    "            \"foaf:name\": sanitize_label(\"Emerson Duarte\"),\n",
+    "            \"foaf:mbox\": \"emersonbd@ufrj.br\",\n",
+    "        },\n",
+    "    )\n",
+    "    agents[\"script\"] = d1.agent(\n",
+    "        \"ufrj:getProv.py\",\n",
+    "        {\"prov:type\": \"prov:SoftwareAgent\", \"foaf:name\": \"getProv.py\"},\n",
+    "    )\n",
+    "\n",
+    "    # Relacionando os agentes\n",
+    "    d1.actedOnBehalfOf(agents[\"ppgi\"], agents[\"ufrj\"])\n",
+    "    d1.actedOnBehalfOf(agents[\"mai803\"], agents[\"ppgi\"])\n",
+    "    d1.actedOnBehalfOf(agents[\"developer\"], agents[\"mai803\"])\n",
+    "    d1.actedOnBehalfOf(agents[\"script\"], agents[\"developer\"])\n",
+    "\n",
+    "    return agents\n",
+    "\n",
+    "\n",
+    "def generate_prov_document(nome_arquivo):\n",
+    "    try:\n",
+    "        # Criar o documento PROV\n",
+    "        d1 = ProvDocument()\n",
+    "        d1.add_namespace(\"ufrj\", \"https://www.ufrj.br\")\n",
+    "        d1.add_namespace(\"foaf\", \"http://xmlns.com/foaf/0.1/\")\n",
+    "\n",
+    "        agents = create_agents(d1)\n",
+    "        entities = {}\n",
+    "        activities = {}\n",
+    "\n",
+    "        # Entidades (datasets)\n",
+    "        entities[\"SINESP\"] = d1.entity(\n",
+    "            \"ufrj:dados-sinesp\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Análise de Dados Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/BancoVDE_2022.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "        entities[\"SINESP\"] = d1.entity(\n",
+    "             \"ufrj:dados-sinesp\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Análise de Dados Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/BancoVDE_2023.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "        entities[\"SINESPJC\"] = d1.entity(\n",
+    "            \"ufrj:dados-sinespjc-uf\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Indicadores Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/Indicadoressegurancapublicauf.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "        entities[\"SINESPJC\"] = d1.entity(\n",
+    "            \"ufrj:dados-sinespjc-uf\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Indicadores Segurança Pública\"),\n",
+    "                \"prov:type\": \"foaf:Document\",\n",
+    "                \"prov:location\": \"data/raw/Indicadoressegurancapublicamunic.xlsx\",\n",
+    "            },\n",
+    "        )\n",
+    "        # Atividade de processamento\n",
+    "        activities[\"process_data\"] = d1.activity(\n",
+    "            \"ufrj:processamento-dados\", startTime=datetime.datetime.now()\n",
+    "        )\n",
+    "        d1.used(activities[\"process_data\"], entities[\"SINESP\"])\n",
+    "        d1.used(activities[\"process_data\"], entities[\"SINESPJC\"])\n",
+    "\n",
+    "        # Entidades de resultados processados\n",
+    "        results = {\n",
+    "            \"vitimizacao\": \"Vitimização\",\n",
+    "            \"homicidios_dolosos\": \"Homicídios Dolosos\",\n",
+    "            \"roubo_carros\": \"Roubo de Carros\",\n",
+    "            \"trafico_drogas\": \"Tráfico de Drogas\",\n",
+    "        }\n",
+    "\n",
+    "        for key, label in results.items():\n",
+    "            entities[key] = d1.entity(\n",
+    "                f\"ufrj:{key}\",\n",
+    "                {\"prov:label\": sanitize_label(label), \"prov:type\": \"prov:Entity\"},\n",
+    "            )\n",
+    "            d1.wasGeneratedBy(entities[key], activities[\"process_data\"])\n",
+    "\n",
+    "        # Atividade de visualização\n",
+    "        activities[\"visualization\"] = d1.activity(\n",
+    "            \"ufrj:visualizacao\", startTime=datetime.datetime.now()\n",
+    "        )\n",
+    "        d1.used(activities[\"visualization\"], entities[\"SINESP\"])\n",
+    "        d1.used(activities[\"visualization\"], entities[\"SINESPJC\"])\n",
+    "\n",
+    "        # Resultado da visualização\n",
+    "        entities[\"visualization_output\"] = d1.entity(\n",
+    "            \"ufrj:visualizacao-output\",\n",
+    "            {\n",
+    "                \"prov:label\": sanitize_label(\"Resultado da Visualização\"),\n",
+    "                \"prov:type\": \"prov:Entity\",\n",
+    "            },\n",
+    "        )\n",
+    "        d1.wasGeneratedBy(entities[\"visualization_output\"], activities[\"visualization\"])\n",
+    "\n",
+    "        # Associações\n",
+    "        d1.wasAssociatedWith(activities[\"process_data\"], agents[\"developer\"])\n",
+    "        d1.wasAssociatedWith(activities[\"process_data\"], agents[\"script\"])\n",
+    "        d1.wasAssociatedWith(activities[\"visualization\"], agents[\"developer\"])\n",
+    "\n",
+    "        # Salvar gráfico PROV\n",
+    "        img_dir = \"assets/img\"\n",
+    "        os.makedirs(img_dir, exist_ok=True)\n",
+    "        output_path = os.path.join(img_dir, f\"{nome_arquivo}.png\")\n",
+    "        print(f\"O gráfico será salvo em: {output_path}\")\n",
+    "\n",
+    "        # Gerar o gráfico com o prov_to_dot\n",
+    "        dot = prov_to_dot(d1)\n",
+    "\n",
+    "        # Verificar se dot é do tipo pydot.Dot e converter para graphviz.Digraph\n",
+    "        if isinstance(dot, pydot.Dot):\n",
+    "            # Converter pydot.Dot para graphviz.Digraph\n",
+    "            graphviz_dot = Digraph(comment=\"PROV Graph\")\n",
+    "            for node in dot.get_nodes():\n",
+    "                graphviz_dot.node(node.get_name(), label=node.get_label())\n",
+    "            for edge in dot.get_edges():\n",
+    "                graphviz_dot.edge(edge.get_source(), edge.get_destination())\n",
+    "\n",
+    "            # Configuração de aparência do gráfico\n",
+    "            graphviz_dot.attr(dpi='300')  # Alta resolução\n",
+    "            graphviz_dot.attr(dpi='300', format='png', size='10,10')  # Definindo a resolução, formato e tamanho\n",
+    "\n",
+    "            # Ajustar propriedades gerais\n",
+    "            graphviz_dot.attr(fontname=\"Helvetica\", fontsize=\"12\")\n",
+    "            graphviz_dot.attr(style=\"solid\", fontcolor=\"black\", color=\"black\", fontname=\"Helvetica\")\n",
+    "\n",
+    "            # Salvar o gráfico gerado em formato PNG\n",
+    "            graphviz_dot.render(output_path, format='png')\n",
+    "            print(f\"Gráfico gerado com sucesso! Caminho: {output_path}\")\n",
+    "        else:\n",
+    "            raise TypeError(\"O objeto 'dot' não é do tipo 'pydot.Dot'. Verifique a conversão.\")\n",
+    "\n",
+    "        return output_path\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao gerar o documento PROV: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    prov_image_path = generate_prov_document(\"analise_Dados_SegPub\")\n",
+    "    if prov_image_path:\n",
+    "        print(f\"Arquivo PROV gerado: {prov_image_path}\")\n",
+    "    else:\n",
+    "        print(\"Falha ao gerar o arquivo PROV.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34105949-8fc2-456f-b4ac-bef3d237c6f1",
    "metadata": {},
    "outputs": [],
    "source": []
